added meta tag for linkedin and preview picture

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="toDoFam" />
+    <meta
+      property="og:image"
+      content="https://jinho6225.github.io/todofam/todofam.png"
+    />
+    <meta property="og:description" content="" />
+    <meta property="og:url" content="https://jinho6225.github.io/todofam/" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
